[workspace]
resolver = "2"
members = [
    "crates/rippled-bridge",
    "crates/plugin-transactor",
    "crates/dummy_tx",
    "crates/cft-light/cftoken_issuance_create",
    "crates/cft-light/payment"
]

[workspace.dependencies]
xrpl-rust-sdk-core = { path = "../../xrpl-rust-sdk/xrpl-rust-sdk-core" }
#xrpl-rust-sdk-core = {path = "../../../../../../github/xpring-eng/xrpl-rust-sdk/xrpl-rust-sdk-core"}