[package]
name = "cftoken-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin-transactor = { path = "../../plugin-transactor" }
rippled-bridge = { path = "../../rippled-bridge" }
xrpl-rust-sdk-core = { workspace = true }