[package]
name = "xrp_to_xrp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "0.17.0"
goose-eggs = "0.5.1"
tokio = "^1.12"
xrpl-rust-sdk-core = {workspace = true}
xrpl-rust-sdk-client = {workspace = true}
serde = "1.0.163"
serde_json = "1.0.96"
once_cell = "1.18.0"
awaitility = "0.3.0"
hex = "0.4.3"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
futures-util = "0.3.28"
